NFS-2: After subscribing to seven rss feeds, feed titles start repeating themselves on subsequent entries
git-svn-id: https://source.sakaiproject.org/contrib/ufp/newsfeeds/trunk@48360 fdecad78-55fc-0310-b1b2-d7d25cf747c9